[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Theme/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/ui/Background_Game_Title.png" type="Texture" id=4]
[ext_resource path="res://Scripts/InfiniteBg.gd" type="Script" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Backgrounds" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Background1" parent="Backgrounds" instance=ExtResource( 2 )]
position = Vector2( 240, 400 )

[node name="Background2" parent="Backgrounds" instance=ExtResource( 2 )]
position = Vector2( 840, 400 )

[node name="Background3" parent="Backgrounds" instance=ExtResource( 2 )]
position = Vector2( 1440, 400 )

[node name="BackgroundGameTitle" type="Sprite" parent="."]
position = Vector2( 240, 120 )
scale = Vector2( -1.46848, 1.20624 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 120.0
margin_top = 88.0
margin_right = 250.0
margin_bottom = 128.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "BirdScape"

[node name="PlayButton" type="Button" parent="."]
margin_left = 144.0
margin_top = 216.0
margin_right = 352.0
margin_bottom = 272.0
theme = ExtResource( 3 )
text = "Play"

[node name="OptionsButton" type="Button" parent="."]
margin_left = 144.0
margin_top = 328.0
margin_right = 352.0
margin_bottom = 376.0
theme = ExtResource( 3 )
text = "Options"

[node name="QuitButton" type="Button" parent="."]
margin_left = 144.0
margin_top = 424.0
margin_right = 352.0
margin_bottom = 472.0
theme = ExtResource( 3 )
text = "Quit"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
